semi responsive a la pc del cole, quiero probar el minMax()

--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -106,7 +106,7 @@
                             <h4>Todoterreno: SI</h4>
                         </div>
                         <div id="hondaEnergia2">
-                            <h4>Energia: Fósil (ECON)</h4>: 
+                            <h4>Energia: Fósil (ECON)</h4> 
                         </div>
                         <div id="hondaDesc2">
                             <p>Frente agresivo y moderno con parrilla prominente, luces led con sensor crepuscular, techo corredizo eléctrico, espacio para hasta cinco pasajeros o 2 con un gran baúl de hasta 1600[L]</p>
@@ -175,7 +175,7 @@
                             <h4>Todoterreno: NO</h4>
                         </div>
                         <div id="audiEnergia2">
-                            <h4>Energia: Fósil</h4>: 
+                            <h4>Energia: Fósil</h4>
                         </div>
                         <div id="audiDesc2">
                             <p>Las amplias tomas de aire y la extremadamente ancha parrilla crean una primera impresión poderosa, además disfrutarás de una generosa cantidad de espacio</p>
@@ -244,7 +244,7 @@
                             <h4>Todoterreno: NO</h4>
                         </div>
                         <div id="chevrEnergia2">
-                            <h4>Energia: Fósil</h4>: 
+                            <h4>Energia: Fósil</h4>
                         </div>
                         <div id="chevrDesc2">
                             <p>La parrilla frontal impresiona con sus detalles cromados, sumado a los faros traseros LED, una cámara frontal detecta los carriles, y un sistema de detección de colisiones frontales</p>
@@ -313,7 +313,7 @@
                             <h4>Todoterreno: SI</h4>
                         </div>
                         <div id="renaEnergia2">
-                            <h4>Energia: Fósil</h4>: 
+                            <h4>Energia: Fósil</h4>
                         </div>
                         <div id="renaDesc2">
                             <p>Sus nuevas líneas mas agresivas, parrilla negro brillante, faros delanteros LED con DLR integrado, su espacio de baúl de hasta 475L te ayudan a desenvolverte en cualquier situación</p>
@@ -382,7 +382,7 @@
                             <h4>Todoterreno: NO</h4>
                         </div>
                         <div id="fordEnergia2">
-                            <h4>Energia: Eléctrica</h4>: 
+                            <h4>Energia: Eléctrica</h4>
                         </div>
                         <div id="fordDesc2">
                             <p>Además de un baúl trasero de 402 [L], cuanta con uno delantero de 139.5 [L]; sus puertas se abren con un botón, asi puedes entrar aún con cosas en la mano</p>
@@ -451,7 +451,7 @@
                             <h4>Todoterreno: NO</h4>
                         </div>
                         <div id="fiatEnergia2">
-                            <h4>Energia: Fósil</h4>: 
+                            <h4>Energia: Fósil</h4>
                         </div>
                         <div id="fiatDesc2">
                             <p>Combina la silueta de un sedán, una cupé y un SUV con un diseño frontal pasivo pero con lineas marcadas. Tiene 6 velocidades, espacio para 5 personas y 600 a 1000[L] de baúl</p>
@@ -520,7 +520,7 @@
                             <h4>Todoterreno: SI</h4>
                         </div>
                         <div id="nissEnergia2">
-                            <h4>Energia: Fósil</h4>: 
+                            <h4>Energia: Fósil</h4>
                         </div>
                         <div id="nissDesc2">
                             <p>Su frente tiene todas las caracteristicas del tipo agresivas, una parrilla en forma de panal unido a focos alargados pero robustos y luces laterales semi cuadradas</p>
