cree la informacion de porque vender tu auto aqui

--- a/paginas/VentaAuto.html
+++ b/paginas/VentaAuto.html
@@ -98,6 +98,39 @@
                 </div>
             </form>
         </div>
+        <div id="contenedorh2va">
+            <h2>¿Por que vender tu auto en nuestra concesionaria?</h2>
+        </div>
+        <div id="infova1">
+            <h3>Beneficios de Vender Aquí</h3>
+            <p>Vender tu auto nunca ha sido tan fácil y seguro. Con nosotros, tienes acceso a una plataforma diseñada para simplificar cada paso del proceso, desde la publicación hasta la venta final. Estos son algunos de los beneficios que obtendrás al vender tu auto con nosotros:</p>
+            <h4>Rápido y sencillo</h4>
+            <li>Publica tu auto en minutos y conecta rápidamente con compradores interesados.</li>
+            <h4>Máxima visibilidad:</h4>
+            <li>Tu anuncio será visto por miles de compradores potenciales, aumentando las posibilidades de venta en menos tiempo.</li>
+            <h4>Soporte confiable</h4>
+            <li>Nuestro equipo de atención al cliente está aquí para ayudarte en cada paso, brindándote toda la orientación que necesites.</li>
+        </div>
+        <div id="infova2">
+            <h3>Proceso de Venta</h3>
+            <p>Vender tu auto es fácil y seguro siguiendo estos simples pasos. Te guiamos en cada etapa para que la experiencia sea rápida y sin complicaciones:</p>
+            <h4>Registro y Publicación del Anuncio</h4>
+            <li>Crea una cuenta en nuestra plataforma y publica los detalles de tu auto. Incluye fotos de calidad, una descripción completa, y especifica el precio. Cuantos más detalles brindes, mayores serán las posibilidades de captar la atención de compradores interesados.</li>
+            <h4>Recepción de Ofertas y Contacto con Compradores</h4>
+            <li>Una vez publicado el anuncio, recibirás notificaciones cuando alguien esté interesado. Puedes revisar y gestionar las ofertas directamente desde tu cuenta, facilitando la comunicación y asegurando transparencia en cada contacto.</li>
+            <h4>Negociación y Aceptación de la Oferta</h4>
+            <li>Puedes negociar con los compradores y ajustar detalles específicos, como el precio o el lugar de encuentro. Cuando encuentres la oferta adecuada, acepta y confirma la transacción para pasar al siguiente paso.</li>
+        </div>
+        <div id="infova3">
+            <h3>Opciones de Publicación</h3>
+            <h4>Publicación Estándar</h4>
+            <li>Ideal para quienes buscan una publicación económica y efectiva. Incluye todas las características esenciales: fotos del auto, descripción detallada y contacto directo con compradores. Perfecto para quienes desean una experiencia de venta sin complicaciones.</li>
+            <h4>Publicación Destacada</h4>
+            <li>Lleva tu anuncio al siguiente nivel. Con este plan, tu publicación se mostrará en la parte superior de las búsquedas, resaltada para captar más atención y obtener más visitas. Incluye una insignia especial que lo diferencia de otros anuncios, ideal para vender en un menor tiempo.</li>
+            <h4>Publicación Premium</h4>
+            <li>La opción más completa. Con la Publicación Premium, tu auto se mostrará como destacado en toda la plataforma, con posicionamiento prioritario y visibilidad en áreas promocionales. Además, tendrás acceso a herramientas avanzadas de análisis para ver cuántas personas han interactuado con tu anuncio. Esta opción es ideal si deseas vender tu auto rápidamente y sin limitaciones.</li>
+        
+        </div>
 
     </main>
 
