--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="keywords" content="concecionaria, autos, compra de autos, automóviles, ">
     <title></title>
 </head>
 <body id="bodymain">
@@ -39,7 +41,7 @@
                                 <a class="nav-link mx-lg-2" href="#">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="">Productos</a>
+                                <a class="nav-link mx-lg-2" href="paginas/VentaAuto.html" target="_blank">Productos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-lg-2" href="#">Ubicación</a>
@@ -51,17 +53,17 @@
         </nav>
     </header>
     <section class="row container-fluid" id="que-somos">
-        <img id="foto-fondo" src="assets/imagenes/foto_fondo_index.jpg" alt="">
-        <h2>¿Qué somos?</h2>
-        <p>Somos una empresa dedicada a la venta y distribución de materiales relacionado a la carrocería, incluyendo automóviles,motores, repuestos, y demás </p>
+        <img id="que-somos__foto-fondo" src="assets/imagenes/foto_fondo_index.jpg" alt="">
+        <h2 id="que-somos__h2">¿Qué somos?</h2>
+        <p id="que-somos__p">Somos una empresa dedicada a la venta y distribución de materiales relacionado a la carrocería, incluyendo automóviles, motores, repuestos, y demás.</p>
     </section>
     <div id="productos-carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" id="carousel-item-1" data-bs-interval="3000">
-            <img src="assets/imagenes/main_carousel/main-carousel-img1.png" data-interval="1000" class="d-block w-100" alt="...">
+            <img src="assets/imagenes/main/carousel/main-carousel-img1.png" data-interval="1000" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="assets/imagenes/main_carousel/main-carousel-img2.png" class="d-block w-100" alt="...">
+            <img src="assets/imagenes/main/carousel/main-carousel-img2.png" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#productos-carousel" data-bs-slide="prev">
@@ -72,6 +74,57 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div>
+    </div>
+    <section id="comp-related" class="row container-fluid">
+        <h2 id="comp-related__h2">EMPRESAS ENCONTRADAS EN ESTA CONCESIONARIA</h2>
+
+        <div class="comp-related__companies">
+            <div id="comp-related__companies--logo1"> 
+                <img src="assets/imagenes/main/empresas-relacionadas/Chevrolet-logo.png" alt="">
+            </div>
+            <h3 id="comp-related__companies--t1" >CHEVROLET</h3>
+            <p id="comp-related__companies--p1" >Chevrolet es una de las marcas de automóviles más reconocidas a nivel mundial, destacada por ofrecer una amplia variedad de vehículos que combinan tecnología, rendimiento y diseño accesible. Los autos Chevrolet están diseñados para responder a diversas necesidades de los conductores, desde modelos compactos y eficientes en consumo de combustible hasta SUVs y camionetas de gran capacidad. La marca es conocida por su enfoque en la seguridad y la innovación, integrando tecnologías como sistemas avanzados de asistencia al conductor, conectividad a través de pantalla táctil y opciones de conectividad móvil.</p>
+        </div>
+            
+        <div class="comp-related__companies">
+            <div id="comp-related__companies--logo2"> 
+                <img id="comp-related__img2" src="assets/imagenes/main/empresas-relacionadas/Honda-logo.png" alt="">
+            </div>
+            <h3 id="comp-related__companies--t2" >HONDA</h3>
+            <p id="comp-related__companies--p2" >Honda es una marca japonesa reconocida por fabricar vehículos confiables, eficientes y con un enfoque en la tecnología avanzada. Su gama de autos incluye desde modelos compactos y económicos hasta SUVs y sedanes de mayor tamaño. Honda es conocida por la durabilidad de sus motores y la eficiencia de combustible, lo que la convierte en una opción popular entre los conductores que buscan vehículos de bajo mantenimiento. Además, la marca integra innovaciones como sistemas de seguridad avanzados, opciones híbridas y tecnologías de conectividad para mejorar la experiencia de conducción.</p>
+        </div>
+
+        <div class="comp-related__companies">
+            <div id="comp-related__companies--logo3"> 
+                <img id="comp-related__img3" src="assets/imagenes/main/empresas-relacionadas/Audi-logo.png" alt="">
+            </div>
+            <h3 id="comp-related__companies--t3" >AUDI</h3>
+            <p id="comp-related__companies--p3" >Audi es una marca alemana de autos de lujo conocida por su diseño elegante, alto rendimiento y tecnología innovadora. Sus vehículos están enfocados en ofrecer una experiencia de conducción premium, con potentes motores, tracción en las cuatro ruedas (quattro) y una excelente calidad de construcción. Audi se destaca por incorporar tecnologías de vanguardia, como sistemas avanzados de asistencia al conductor, pantallas digitales y opciones de motorización eléctrica. La marca ofrece una amplia gama de modelos, desde sedanes deportivos hasta SUVs y coches de alto rendimiento, siempre priorizando la comodidad, la seguridad y el estilo.</p>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footerContainer">
+            <div class="socialIcons">
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-google-plus"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+            <div class="footerNav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="">Productos</a></li>
+                    <li><a href="#">Ubicación</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">Nosotros</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footerBottom">
+            <p>Copyright &copy;2024; Designed by <span class="designer">Drive and dream</span></p>
+        </div>
+    </footer>
 </body>
 </html>
