--- a/paginas/tienda/autos-productos/1Chevrolet/prod-1.html
+++ b/paginas/tienda/autos-productos/1Chevrolet/prod-1.html
@@ -166,7 +166,7 @@
         </div>
 
         <details class="prods__btnVerMas">
-            <summary>Prueba 1</summary>
+            <summary>INFORMACION EXTRA</summary>
             <div class="prods__masInfo">
                 <table>
                     <tr>
@@ -185,6 +185,7 @@
                         <td>Largo:</td>
                     </tr>
                 </table>
+                <h4>Prueba de manejo</h4>
                 <video controls>
                     <source src="../../../../assets/videos/prods/chevrolet/Chevrolet Cruze RS.mp4" type="video/mp4">
                 </video>   
