--- a/paginas/tienda/autos-productos/1Chevrolet/prod-2.html
+++ b/paginas/tienda/autos-productos/1Chevrolet/prod-2.html
@@ -136,6 +136,33 @@
         <div class="row prods__descripcion">
             <p>La segunda generación del mediano del moño es producida en pocos lugares del mundo y entre ellos se encuentra Argentina. El modelo se destaca por un diseño cosmopolita, un buen pulido general del chasis y por el motor 1.4L Turbo de 154 CV y generosos 245 Nm de torque. Completa un alto nivel de seguridad y trucos electrónicos interesantes el las versiones más equipadas. En 2019 llega a nuestro mercado la versión denominada Premier. Se trata del tope de gama con novedades en equipamiento, interior, estética y multimedia.</p>
         </div>
+
+        <details class="prods__btnVerMas">
+            <summary>INFORMACION EXTRA</summary>
+            <div class="prods__masInfo">
+                <table>
+                    <tr>
+                        <td>Puertas:</td>
+                        <td>Valvulas: </td>
+                        <td>Capacidad de tanque: </td>
+                    </tr>
+                    <tr>
+                        <td>Potencia: </td>
+                        <td>Colores: </td>
+                        <td>Posavasos: </td>
+                    </tr>
+                    <tr>
+                        <td>Alto: </td>
+                        <td>Ancho:</td>
+                        <td>Largo:</td>
+                    </tr>
+                </table>
+                <h4>Prueba de manejo</h4>
+                <video controls>
+                    <source src="../../../../assets/videos/prods/chevrolet/Chevrolet Cruze RS.mp4" type="video/mp4">
+                </video>   
+            </div>
+        </details>
     </main>
 </body>
 </html>
