--- a/paginas/tienda/autos-productos/1Chevrolet/prod-3.html
+++ b/paginas/tienda/autos-productos/1Chevrolet/prod-3.html
@@ -148,6 +148,33 @@
         <div class="row prods__descripcion">
             <p>La segunda generación del Onix se volvió global y eso significó que ahora todos los modelos llevarán ese nombre, ya sean hatchback o sedán. Es por esto que el Prisma pasa a llamarse Onix PLus. Chevrolet. El Chevrolet Onix Plus JOY no es otra cosa que el anterior Prisma que pasa a ocupar la entrada de gama de la marca con misma estética y equipamiento simplificado para garantizar un precio competitivo. Mecánica y seguridad se mantienen inalterados, ofreciendo en el segundo aspecto los elementos exigidos por ley como ABS y doble airbag.</p>
         </div>
+
+        <details class="prods__btnVerMas">
+            <summary>INFORMACION EXTRA</summary>
+            <div class="prods__masInfo">
+                <table>
+                    <tr>
+                        <td>Puertas:</td>
+                        <td>Valvulas: </td>
+                        <td>Capacidad de tanque: </td>
+                    </tr>
+                    <tr>
+                        <td>Potencia: </td>
+                        <td>Colores: </td>
+                        <td>Posavasos: </td>
+                    </tr>
+                    <tr>
+                        <td>Alto: </td>
+                        <td>Ancho:</td>
+                        <td>Largo:</td>
+                    </tr>
+                </table>
+                <h4>Prueba de manejo</h4>
+                <video controls>
+                    <source src="../../../../assets/videos/prods/chevrolet/Chevrolet Cruze RS.mp4" type="video/mp4">
+                </video>   
+            </div>
+        </details>
     </main>
 </body>
 </html>
