--- a/paginas/tienda/autos-productos/2Honda/prod-2.html
+++ b/paginas/tienda/autos-productos/2Honda/prod-2.html
@@ -144,6 +144,33 @@
         <div class="row prods__descripcion">
             <p>Presentada en Brasil en julio de 2022, llega a Argentina desde ese país la nueva generación del Honda HR-V, SUV para el segmento B que se posiciona por debajo del flamante ZR-V. El nuevo HR-V llega al país con el objetivo de cubrir la entrada de gama de la marca utilizando un motor 1.5L 16V I-VTEC® de 121 CV y 145 Nm asociado a caja automática del tipo CVT con modo Sport y levas al volante (en la versión más equipada). Además del gran espacio interior se destaca por la dotación de seguridad con pack completo de ADAS.</p>
         </div>
+
+        <details class="prods__btnVerMas">
+            <summary>INFORMACION EXTRA</summary>
+            <div class="prods__masInfo">
+                <table>
+                    <tr>
+                        <td>Puertas:</td>
+                        <td>Valvulas: </td>
+                        <td>Capacidad de tanque: </td>
+                    </tr>
+                    <tr>
+                        <td>Potencia: </td>
+                        <td>Colores: </td>
+                        <td>Posavasos: </td>
+                    </tr>
+                    <tr>
+                        <td>Alto: </td>
+                        <td>Ancho:</td>
+                        <td>Largo:</td>
+                    </tr>
+                </table>
+                <h4>Prueba de manejo</h4>
+                <video controls>
+                    <source src="../../../../assets/videos/prods/chevrolet/Chevrolet Cruze RS.mp4" type="video/mp4">
+                </video>   
+            </div>
+        </details>
     </main>
 </body>
 </html>
