--- a/paginas/tienda/autos-productos/2Honda/prod-3.html
+++ b/paginas/tienda/autos-productos/2Honda/prod-3.html
@@ -160,6 +160,33 @@
         <div class="row prods__descripcion">
             <p>Clasico de clásicos en el segmento del SUV C, el Honda CR-V entra en una nueva generación, con mayores dimensiones y la nueva estética de la marca a novel global. Su motor es el cuatro cilindros 1.5 turbo naftero de 191CV y 235 Nm entre 1.700 y 5.000. La transmisión es una CVT con modos Sport “S” y Low “L”, y hay opción de tracción delantera o AWD.</p>
         </div>
+
+        <details class="prods__btnVerMas">
+            <summary>INFORMACION EXTRA</summary>
+            <div class="prods__masInfo">
+                <table>
+                    <tr>
+                        <td>Puertas:</td>
+                        <td>Valvulas: </td>
+                        <td>Capacidad de tanque: </td>
+                    </tr>
+                    <tr>
+                        <td>Potencia: </td>
+                        <td>Colores: </td>
+                        <td>Posavasos: </td>
+                    </tr>
+                    <tr>
+                        <td>Alto: </td>
+                        <td>Ancho:</td>
+                        <td>Largo:</td>
+                    </tr>
+                </table>
+                <h4>Prueba de manejo</h4>
+                <video controls>
+                    <source src="../../../../assets/videos/prods/chevrolet/Chevrolet Cruze RS.mp4" type="video/mp4">
+                </video>   
+            </div>
+        </details>
     </main>
 </body>
 </html>
