--- a/paginas/tienda/autos-productos/3Audi/prod-2.html
+++ b/paginas/tienda/autos-productos/3Audi/prod-2.html
@@ -193,6 +193,33 @@
         <div class="row prods__descripcion">
             <p>Honda traslada todos los atributos del popular Civic al segmento de los SUV compactos con el nuevo ZR-V. Disponible únicamente con mecánica híbrida, el Honda ZR-V está llamado a ser un triunfador en la gama del fabricante nipón.</p>
         </div>
+        
+        <details class="prods__btnVerMas">
+            <summary>INFORMACION EXTRA</summary>
+            <div class="prods__masInfo">
+                <table>
+                    <tr>
+                        <td>Puertas:</td>
+                        <td>Valvulas: </td>
+                        <td>Capacidad de tanque: </td>
+                    </tr>
+                    <tr>
+                        <td>Potencia: </td>
+                        <td>Colores: </td>
+                        <td>Posavasos: </td>
+                    </tr>
+                    <tr>
+                        <td>Alto: </td>
+                        <td>Ancho:</td>
+                        <td>Largo:</td>
+                    </tr>
+                </table>
+                <h4>Prueba de manejo</h4>
+                <video controls>
+                    <source src="../../../../assets/videos/prods/chevrolet/Chevrolet Cruze RS.mp4" type="video/mp4">
+                </video>   
+            </div>
+        </details>
     </main>
 </body>
 </html>
