--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="concecionaria, autos, compra de autos, automóviles, ">
-    <title></title>
+    <meta name="description" content="Empresa dedicada a la venta y distribución de materiales relacionado a la carrocería, incluyendo automóviles, motores, repuestos, y demás.">
+    <meta name="keywords" content="concecionaria, autos, compra de autos, automóviles, Chevrolet, Honda, Audi,">
+    <link rel="icon" href="assets/imagenes/logo/logo.png">
+    <title>Drive & Dream</title>
 </head>
 <body id="bodymain">
     <header id="in_header">
