--- a/paginas/sesion.html
+++ b/paginas/sesion.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="icon" href="../assets/imagenes/logo/logo.png">
     <title>Document</title>
 </head>
 <body id="body__Registro">
