--- a/paginas/tienda/autos-productos/3Audi/prod-3.html
+++ b/paginas/tienda/autos-productos/3Audi/prod-3.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../../../../assets/imagenes/logo/logo.png">
     <title>Honda ZR-V</title>
 </head>
 <body>
