añadidos a main + cosita borrada de _cliente

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <img id="logomain" src="assets/imagenes/logo/logo.png" alt="">
             <h1 id="titulo-empresa">Drive & Dream</h1>
         </div>
+        
         <nav class="navbar navbar-expand-lg" id="main-nav">
             <div class="container-fluid">
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -33,7 +34,7 @@
                         </h5>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
-                    <div class="offcanvas-body" id="main-nav--menu">
+                    <div class="offcanvas-body" id="main-nav__menu">
                         <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
                             <li class="nav-item">
                                 <a class="nav-link mx-lg-2 active" aria-current="page" id="menu-current-page" href="#">Home</a>
@@ -87,7 +88,7 @@
                 <img src="assets/imagenes/main/empresas-relacionadas/Chevrolet-logo.png" alt="">
             </div>
             <h3 id="comp-related__companies--t1" >CHEVROLET</h3>
-            <p id="comp-related__companies--p1" >Chevrolet es una de las marcas de automóviles más reconocidas a nivel mundial, destacada por ofrecer una amplia variedad de vehículos que combinan tecnología, rendimiento y diseño accesible. Los autos Chevrolet están diseñados para responder a diversas necesidades de los conductores, desde modelos compactos y eficientes en consumo de combustible hasta SUVs y camionetas de gran capacidad. La marca es conocida por su enfoque en la seguridad y la innovación, integrando tecnologías como sistemas avanzados de asistencia al conductor, conectividad a través de pantalla táctil y opciones de conectividad móvil.</p>
+            <p id="comp-related__companies--p1" >Una de las marcas de automóviles más reconocidas a nivel mundial, destacada por ofrecer una amplia variedad de vehículos que combinan tecnología, rendimiento y diseño accesible. Los autos Chevrolet están diseñados para responder a diversas necesidades de los conductores, desde modelos compactos y eficientes en consumo de combustible hasta SUVs y camionetas de gran capacidad. La marca es conocida por su enfoque en la seguridad y la innovación, integrando tecnologías como sistemas avanzados de asistencia al conductor, conectividad a través de pantalla táctil y opciones de conectividad móvil.</p>
         </div>
             
         <div class="comp-related__companies">
@@ -95,7 +96,7 @@
                 <img id="comp-related__img2" src="assets/imagenes/main/empresas-relacionadas/Honda-logo.png" alt="">
             </div>
             <h3 id="comp-related__companies--t2" >HONDA</h3>
-            <p id="comp-related__companies--p2" >Honda es una marca japonesa reconocida por fabricar vehículos confiables, eficientes y con un enfoque en la tecnología avanzada. Su gama de autos incluye desde modelos compactos y económicos hasta SUVs y sedanes de mayor tamaño. Honda es conocida por la durabilidad de sus motores y la eficiencia de combustible, lo que la convierte en una opción popular entre los conductores que buscan vehículos de bajo mantenimiento. Además, la marca integra innovaciones como sistemas de seguridad avanzados, opciones híbridas y tecnologías de conectividad para mejorar la experiencia de conducción.</p>
+            <p id="comp-related__companies--p2" >Marca japonesa reconocida por fabricar vehículos confiables, eficientes y con un enfoque en la tecnología avanzada. Su gama de autos incluye desde modelos compactos y económicos hasta SUVs y sedanes de mayor tamaño. Honda es conocida por la durabilidad de sus motores y la eficiencia de combustible, lo que la convierte en una opción popular entre los conductores que buscan vehículos de bajo mantenimiento. Además, la marca integra innovaciones como sistemas de seguridad avanzados, opciones híbridas y tecnologías de conectividad para mejorar la experiencia de conducción.</p>
         </div>
 
         <div class="comp-related__companies">
@@ -103,7 +104,14 @@
                 <img id="comp-related__img3" src="assets/imagenes/main/empresas-relacionadas/Audi-logo.png" alt="">
             </div>
             <h3 id="comp-related__companies--t3" >AUDI</h3>
-            <p id="comp-related__companies--p3" >Audi es una marca alemana de autos de lujo conocida por su diseño elegante, alto rendimiento y tecnología innovadora. Sus vehículos están enfocados en ofrecer una experiencia de conducción premium, con potentes motores, tracción en las cuatro ruedas (quattro) y una excelente calidad de construcción. Audi se destaca por incorporar tecnologías de vanguardia, como sistemas avanzados de asistencia al conductor, pantallas digitales y opciones de motorización eléctrica. La marca ofrece una amplia gama de modelos, desde sedanes deportivos hasta SUVs y coches de alto rendimiento, siempre priorizando la comodidad, la seguridad y el estilo.</p>
+            <p id="comp-related__companies--p3" >Marca alemana de autos de lujo conocida por su diseño elegante, alto rendimiento y tecnología innovadora. Sus vehículos están enfocados en ofrecer una experiencia de conducción premium, con potentes motores, tracción en las cuatro ruedas (quattro) y una excelente calidad de construcción. Audi se destaca por incorporar tecnologías de vanguardia, como sistemas avanzados de asistencia al conductor, pantallas digitales y opciones de motorización eléctrica. La marca ofrece una amplia gama de modelos, desde sedanes deportivos hasta SUVs y coches de alto rendimiento, siempre priorizando la comodidad, la seguridad y el estilo.</p>
+        </div>
+        <div class="comp-related__companies">
+            <div id="comp-related__companies--logo2"> 
+                <img id="comp-related__img4" src="assets/imagenes/main/empresas-relacionadas/Fiat-logo.png" alt="">
+            </div>
+            <h3 id="comp-related__companies--t4" >FIAT</h3>
+            <p id="comp-related__companies--p4" >Marca italiana de automóviles conocida por su enfoque en vehículos prácticos, económicos y de diseño funcional. Sus autos se destacan por ser compactos, ideales para el uso urbano, con modelos icónicos como el Fiat 500, que combina estilo retro con tecnología moderna. Fiat ofrece opciones eficientes en consumo de combustible y accesibles, manteniendo un equilibrio entre calidad y precio. Además, la marca ha ampliado su gama con SUVs y vehículos familiares, adaptándose a diferentes estilos de vida, siempre con un diseño distintivo y soluciones prácticas para el día a día.</p>
         </div>
     </section>
 
