listo el responsive a la de la escuela, tablet, MUCHA DEPURACION y empezado el responsive del celular

--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -59,16 +59,16 @@
     </header>
     <main id="tieAut__Main">
         <div id="marcas">
-            <a href="#honda"><input type="button" value="Honda"></a>
-            <a href="#audi"><input type="button" value="Audi"></a>
-            <a href="#chevrolet"><input type="button" value="Chevrolet"></a>
-            <a href="#renault"><input type="button" value="Renault"></a>
-            <a href="#ford"><input type="button" value="Ford"></a>
-            <a href="#fiat"><input type="button" value="Fiat"></a>
-            <a href="#nissan"><input type="button" value="Nissan"></a>
+            <a href="#honda"><button>Honda</button></a>
+            <a href="#audi"><button>Audi</button></a>
+            <a href="#chevrolet"><button>Chevrolet</button></a>
+            <a href="#renault"><button>Renault</button></a>
+            <a href="#ford"><button>Ford</button></a>
+            <a href="#fiat"><button>Fiat</button></a>
+            <a href="#nissan"><button>Nissan</button></a>
         </div>
         <div id="tieAut__Grid">
-            <div id="honda">
+            <div class="tieAut__grid--marcas" id="honda">
                 <h2>Honda</h2>
                 <div id="honda1"><a href="autos-productos/2Honda/prod-1.html">
                     <div id="hondaImg1">
@@ -137,7 +137,7 @@
                     </div>
                 </a></div>
             </div>
-            <div id="audi">
+            <div class="tieAut__grid--marcas" id="audi">
                 <h2>Audi</h2>
                 <div id="audi1"><a href="autos-productos/3Audi/prod-1.html">
                     <div id="audiImg1">
@@ -206,7 +206,7 @@
                     </div>
                 </a></div>
             </div>
-            <div id="chevrolet">
+            <div class="tieAut__grid--marcas" id="chevrolet">
                 <h2>Chevrolet</h2>
                 <div id="chevr1"><a href="autos-productos/1Chevrolet/prod-1.html">
                     <div id="chevrImg1">
@@ -275,7 +275,7 @@
                     </div>
                 </a></div>
             </div>
-            <div id="renault">
+            <div class="tieAut__grid--marcas" id="renault">
                 <h2>Renault</h2>
                 <div id="rena1">
                     <div id="renaImg1">
@@ -344,7 +344,7 @@
                     </div>
                 </div>
             </div>
-            <div id="ford">
+            <div class="tieAut__grid--marcas" id="ford">
                 <h2>Ford</h2>
                 <div id="ford1">
                     <div id="fordImg1">
@@ -413,7 +413,7 @@
                     </div>
                 </div>
             </div>
-            <div id="fiat">
+            <div class="tieAut__grid--marcas" id="fiat">
                 <h2>Fiat</h2>
                 <div id="fiat1">
                     <div id="fiatImg1">
@@ -482,7 +482,7 @@
                     </div>
                 </div>
             </div>
-            <div id="nissan">
+            <div class="tieAut__grid--marcas" id="nissan">
                 <h2>Nissan</h2>
                 <div id="niss1">
                     <div id="nissImg1">
