--- a/paginas/cliente.html
+++ b/paginas/cliente.html
@@ -53,7 +53,7 @@
     </header>
     
     <main id="mainConsulta">
-        <div id="contenedorcliente1">
+        <div id="contenedor_titulo_consulta">
             <div class="h1C">
                 <h1 id="h1_1c">Servicio al cliente</h1>
             </div>
@@ -89,15 +89,15 @@
         <div id="h2c">
             <h2 id="h2_1c">Dudas Generales</h2>
         </div>
-        <div id="if1c">
+        <div id="info1consulta">
             <h3>¿Con que marcas trabajamos?</h3>
             <p class="pc">Trabajamos con: Chevrolet, Ford, Fiat, Honda, Audi, Reno y Nissan.</p>
         </div>
-        <div id="if2c">
+        <div id="info2consulta">
             <h3>¿Los autos son nuevos o usados?</h3>
             <p class="pc">La gran mayoria de los autos son nuevos, pero solemos vender algunos refaccionados, tengan tranqulidad que eso lo aclaramos en todos los autos.</p>
         </div>
-        <div id="if3c">
+        <div id="info3consulta">
             <h3>¿Nuestra ubicacion?</h3>
             <div id="iframeConsulta">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13138.668824434426!2d-58.520191585423824!3d-34.58728635799533!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb63103b2398b%3A0xebe9f7a55116c7aa!2sAudi%20Lenken!5e0!3m2!1ses-419!2sar!4v1730758166110!5m2!1ses-419!2sar" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    
