solucione algunos problemas de mi pagina

--- a/paginas/VentaAuto.html
+++ b/paginas/VentaAuto.html
@@ -58,7 +58,7 @@
         </div>
 
         <div id="contenedorvaformulario" class="form-container">
-            <form action="/submit" method="POST" enctype="multipart/form-data">
+            <form action="#" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="name">Nombre:</label>
                     <input type="text" id="name" name="name" required>
@@ -95,7 +95,7 @@
                 </div>
         
                 <div class="form-group">
-                    <button type="submit">Enviar</button>
+                    <button type="#">Enviar</button>
                 </div>
             </form>
         </div>
