PALETA DE COLORES EN MAIN + mejoras

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header id="in_header">
 
         <div class="container-fluid navbar cont-login">
-            <a href="./paginas/registro.html" id="login-button-principal">Login</a>
+            <a href="./paginas/registro.html" class="login-button" id="login-button-principal">Login</a>
             <button class="navbar-toggler" id="button-menu" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -119,11 +119,11 @@
     <footer>
         <div class="footerContainer">
             <div class="socialIcons">
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-google-plus"></i></a>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://facebook.com/home" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://x.com/home" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://googleplus.com" target="_blank"><i class="fa-brands fa-google-plus"></i></a>
+                <a href="https://youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a>
             </div>
             <div class="footerNav">
                 <ul>
