--- a/paginas/cliente.html
+++ b/paginas/cliente.html
@@ -132,11 +132,11 @@
     <footer>
         <div class="footerContainer">
             <div class="socialIcons">
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-google-plus"></i></a>
-                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://facebook.com/home" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://x.com/home" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://googleplus.com" target="_blank"><i class="fa-brands fa-google-plus"></i></a>
+                <a href="https://youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a>
             </div>
             <div class="footerNav">
                 <ul>
