arreglé el fadeIn y embellecí el buscador, faltan cosas

--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../assets/imagenes/logo/logo.png">
-    <title>Prueba3</title>
+    <title>Venta De Autos - Drive & Dream</title>
 </head>
 <body>
     <header>
@@ -56,12 +56,9 @@
                 </button>
 
                 <!------>
-                <!-- Icono de búsqueda -->
                 <div class="search-icon" onclick="toggleSearch()">
                     🔍
                 </div>
-
-                <!-- Pantalla de búsqueda -->
                 <div id="search-screen" class="search-screen">
                     <div class="search-container">
                         <input type="text" id="search-input" placeholder="Buscar por clase..." oninput="filterDivs()">
@@ -72,15 +69,6 @@
         </nav>
     </header>
     <main id="tieAut__Main">
-        <div id="marcas">
-            <a href="#honda"><button>Honda</button></a>
-            <a href="#audi"><button>Audi</button></a>
-            <a href="#chevrolet"><button>Chevrolet</button></a>
-            <a href="#renault"><button>Renault</button></a>
-            <a href="#ford"><button>Ford</button></a>
-            <a href="#fiat"><button>Fiat</button></a>
-            <a href="#nissan"><button>Nissan</button></a>
-        </div>
         <div id="tieAut__Grid" class="main-content">     
             <div class="tieAut__grid--marcas honda" id="honda">
                 <h2>Honda</h2>
