--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -555,6 +555,29 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="footerContainer">
+            <div class="socialIcons">
+                <a href="https://facebook.com/home" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://x.com/home" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://googleplus.com" target="_blank"><i class="fa-brands fa-google-plus"></i></a>
+                <a href="https://youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+            <div class="footerNav">
+                <ul>
+                    <li><a href="../../index.html">Home</a></li>
+                    <li><a href="">Productos</a></li>
+                    <li><a href="#">Ubicación</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">Nosotros</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footerBottom">
+            <p>Copyright &copy;2024; Designed by <span class="designer">Drive and dream</span></p>
+        </div>
+    </footer>
     <script src="../../scripts.js"></script>
 </body>
 </html>
